--- a/pom.xml
+++ b/pom.xml
@@ -25,26 +25,10 @@
         <relativePath/>
     </parent>
 
-    <repositories>
-        <repository>
-            <id>nexus</id>
-            <name>nexus</name>
-            <url>http://115.28.32.143:8081/repository/maven-public/</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>nexus</id>
-            <name>nexus</name>
-            <url>http://115.28.32.143:8081/repository/maven-public/</url>
-        </pluginRepository>
-    </pluginRepositories>
-
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <dubbo.version>2.8.4</dubbo.version>
+        <dubbo.version>2.5.3</dubbo.version>
         <curator-framework.version>1.3.3</curator-framework.version>
         <zookeeper.version>3.4.8</zookeeper.version>
         <zkclient.version>0.1</zkclient.version>
@@ -60,22 +44,18 @@
         <validator.version>5.2.4.Final</validator.version>
         <ehcache-core.version>2.6.11</ehcache-core.version>
         <zxing.version>3.2.0</zxing.version>
-        <mybatis-starter.version>1.1.1</mybatis-starter.version>
+        <mybatis-starter.version>1.3.0</mybatis-starter.version>
         <druid.version>1.0.24</druid.version>
         <aliyun.oss.version>2.2.3</aliyun.oss.version>
         <pagehelper.version>4.1.6</pagehelper.version>
         <thumbnailator.version>0.4.8</thumbnailator.version>
         <pinyin4j.version>2.5.1</pinyin4j.version>
         <webmagic.version>0.6.1</webmagic.version>
+        <aspectj.version>1.8.10</aspectj.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.aspectj</groupId>
-                <artifactId>aspectjrt</artifactId>
-                <version>${aspectj.version}</version>
-            </dependency>
             <dependency>
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjweaver</artifactId>
@@ -156,12 +136,6 @@
                 <version>${validator.version}</version>
             </dependency>
 
-            <dependency>
-                <groupId>net.sf.ehcache</groupId>
-                <artifactId>ehcache-core</artifactId>
-                <version>${ehcache-core.version}</version>
-            </dependency>
-
             <!-- Swagger -->
             <dependency>
                 <groupId>io.springfox</groupId>
@@ -227,17 +201,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <distributionManagement>
-        <repository>
-            <id>maven-releases</id>
-            <url>http://115.28.32.143:8081/repository/maven-releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>maven-snapshots</id>
-            <url>http://115.28.32.143:8081/repository/maven-snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
 
     <build>
         <resources>
